# VSTtflite-idf

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/esp-idf/examples/get-started/hello_world/: sdkconfig
components/esp-idf/examples/storage/sd_card/sdmmc/: sdkconfig
components/esp-idf/examples/storage/sd_card/sdmmc/main/: sd_card_example_main.c
components/esp-idf/examples/system/deep_sleep/: sdkconfig
components/esp-idf/examples/system/deep_sleep/main/: deep_sleep_example_main.c
components/esp-idf/examples/system/xip_from_psram/: sdkconfig
components/esp-idf/examples/system/xip_from_psram/main/: xip_from_psram_example_main.c
docs/: AXP2101_Datasheet_V1.0_en_3832.docx  ESP_IDF_Configuration.md  OV2640-Register-TAB12.csv  OV2640-Register-TAB13.csv  OV2640-Register.xlsx  SDKCONFIG.md  T-SIM7080G-S3_Pinout.md  axp2101_registers.xlsx  ~$P2101_Datasheet_V1.0_en_3832.docx
examples/esp-idf/: CMakeLists.txt  idf_component.yml  main.cpp
examples/pio-arduino/: diag_dump.cpp  diag_dump.h  main.cpp
main/: CMakeLists.txt  app_main.cpp  camera.cpp  camera.h  httpd.cpp  httpd.h  idf_component.yml  main.cpp  modem.cpp  modem.h  pmu.cpp  pmu.h  ppm.cpp  ppm.h  sdcard.cpp  sdcard.h  wifi.cpp  wifi.h
