idf_component_register(
    SRCS
        "main.cpp"
        "pmu.cpp"
        "modem.cpp"
        "camera.cpp"
        "sdcard.cpp"
        "wifi.cpp"
        "httpd.cpp"
        "ppm.cpp"
    INCLUDE_DIRS "."
    REQUIRES
        esp32-camera
        esp_timer
        driver
        esp_system
        sdmmc
        fatfs
        nvs_flash
        esp_http_server
        esp_netif
        esp_event
        esp_wifi
        esp-tflite-micro
)
